; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_unicode.c_unichar_toupper.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_unicode.c_unichar_toupper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @unichar_toupper(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = call i64 @unichar_islower(i64 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = sub nsw i64 %8, 32
  store i64 %9, i64* %2, align 8
  br label %12

10:                                               ; preds = %1
  %11 = load i64, i64* %3, align 8
  store i64 %11, i64* %2, align 8
  br label %12

12:                                               ; preds = %10, %7
  %13 = load i64, i64* %2, align 8
  ret i64 %13
}

declare dso_local i64 @unichar_islower(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
